--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
            <div id="icons">
             
-            <a id="contact" href="https://github.uconn.edu/pages/jap16139/adv-web-3470/portfolio/contact.html">Contact Me</a>
+            <a id="contact" href="https://jakubpirog.com/contact">Contact Me</a>
 
             <div id="end">
             <a href="https://www.instagram.com/jakub.pirog/?hl=en"><img src="img/iconfinder-icon (1).svg"
@@ -95,10 +95,10 @@
           <nav>
             <ul>
 
-              <li><a href="https://github.uconn.edu/pages/jap16139/adv-web-3470/portfolio/design.html">Design</a></li>
-              <li><a href="https://github.uconn.edu/pages/jap16139/adv-web-3470/portfolio/photography.html">Photography</a></li>
-              <li><a href="https://github.uconn.edu/pages/jap16139/adv-web-3470/portfolio/videography.html">Videography</a></li>
-              <li><a href="https://github.uconn.edu/pages/jap16139/adv-web-3470/portfolio/resume.html">Resume</a></li>
+              <li><a href="https://jakubpirog.com/design">Design</a></li>
+              <li><a href="https://jakubpirog.com/photography">Photography</a></li>
+              <li><a href="https://jakubpirog.com/videography">Videography</a></li>
+              <li><a href="https://jakubpirog.com/resume">Resume</a></li>
 
             </ul>
           </nav>
