--- a/videography.html
+++ b/videography.html
@@ -49,20 +49,20 @@
   <!-- Add your site or application content here -->
   
 <nav id="same-nav">
-  <a class="navbar-brand" href="https://github.uconn.edu/pages/jap16139/adv-web-3470/portfolio/index.html">Home</a>
+  <a class="navbar-brand" href="https://jakubpirog.com/">Home</a>
   <div id="navbarNav1">
     <ul class="navbar-nav1">
       <li class="nav-item1">
-        <a class="nav-link1" href="https://github.uconn.edu/pages/jap16139/adv-web-3470/portfolio/resume.html">Resume</a>
+        <a class="nav-link1" href="https://jakubpirog.com/resume">Resume</a>
       </li>
       <li class="nav-item1">
-        <a class="nav-link1" href="https://github.uconn.edu/pages/jap16139/adv-web-3470/portfolio/photography.html">Photo</a>
+        <a class="nav-link1" href="https://jakubpirog.com/photography">Photo</a>
       </li>
       <li class="nav-item1">
-        <a class="nav-link1" href="https://github.uconn.edu/pages/jap16139/adv-web-3470/portfolio/design.html">Design</a>
+        <a class="nav-link1" href="https://jakubpirog.com/design">Design</a>
       </li>
       <li class="nav-item1">
-        <a class="nav-link1" href="https://github.uconn.edu/pages/jap16139/adv-web-3470/portfolio/contact.html">Contact</a>
+        <a class="nav-link1" href="https://jakubpirog.com/contact">Contact</a>
       </li>
     </ul>
   </div>
