--- a/photography.html
+++ b/photography.html
@@ -46,20 +46,20 @@
 <body>
 
 <nav id="same-nav">
-  <a class="navbar-brand" href="https://github.uconn.edu/pages/jap16139/adv-web-3470/portfolio/index.html">Home</a>
+  <a class="navbar-brand" href="https://jakubpirog.com/">Home</a>
   <div id="navbarNav1">
     <ul class="navbar-nav1">
       <li class="nav-item1">
-        <a class="nav-link1" href="https://github.uconn.edu/pages/jap16139/adv-web-3470/portfolio/resume.html">Resume</a>
+        <a class="nav-link1" href="https://jakubpirog.com/resume">Resume</a>
       </li>
       <li class="nav-item1">
-        <a class="nav-link1" href="https://github.uconn.edu/pages/jap16139/adv-web-3470/portfolio/videography.html">Video</a>
+        <a class="nav-link1" href="https://jakubpirog.com/videography">Video</a>
       </li>
       <li class="nav-item1">
-        <a class="nav-link1" href="https://github.uconn.edu/pages/jap16139/adv-web-3470/portfolio/design.html">Design</a>
+        <a class="nav-link1" href="https://jakubpirog.com/design">Design</a>
       </li>
       <li class="nav-item1">
-        <a class="nav-link1" href="https://github.uconn.edu/pages/jap16139/adv-web-3470/portfolio/contact.html">Contact</a>
+        <a class="nav-link1" href="https://jakubpirog.com/contact">Contact</a>
       </li>
     </ul>
   </div>
@@ -76,13 +76,13 @@
 
 <div id="main">
   <div class="section">
-    <a id="entertainment" href="https://github.uconn.edu/pages/jap16139/adv-web-3470/portfolio/entertainment.html">
+    <a id="entertainment" href="https://jakubpirog.com/entertainment">
       <h2>Entertainment</h2>
     </a>
   </div>
   <h3>X</h3>
   <div class="section">
-    <a id="landscape" href="https://github.uconn.edu/pages/jap16139/adv-web-3470/portfolio/landscape.html">
+    <a id="landscape" href="https://jakubpirog.com/landscape">
     <h2>Landscape</h2>
     </a>
   </div>
