--- a/resume.html
+++ b/resume.html
@@ -42,20 +42,20 @@
 <body>
 
 <nav id="same-nav">
-  <a class="navbar-brand" href="https://github.uconn.edu/pages/jap16139/adv-web-3470/portfolio/index.html">Home</a>
+  <a class="navbar-brand" href="https://jakubpirog.com/">Home</a>
   <div id="navbarNav1">
     <ul class="navbar-nav1">
       <li class="nav-item1">
-        <a class="nav-link1" href="https://github.uconn.edu/pages/jap16139/adv-web-3470/portfolio/photography.html">Photo</a>
+        <a class="nav-link1" href="https://jakubpirog.com/photography">Photo</a>
       </li>
       <li class="nav-item1">
-        <a class="nav-link1" href="https://github.uconn.edu/pages/jap16139/adv-web-3470/portfolio/videography.html">Video</a>
+        <a class="nav-link1" href="https://jakubpirog.com/videography">Video</a>
       </li>
       <li class="nav-item1">
-        <a class="nav-link1" href="https://github.uconn.edu/pages/jap16139/adv-web-3470/portfolio/design.html">Design</a>
+        <a class="nav-link1" href="https://jakubpirog.com/design">Design</a>
       </li>
       <li class="nav-item1">
-        <a class="nav-link1" href="https://github.uconn.edu/pages/jap16139/adv-web-3470/portfolio/contact.html">Contact</a>
+        <a class="nav-link1" href="https://jakubpirog.com/contact">Contact</a>
       </li>
     </ul>
   </div>
@@ -65,7 +65,7 @@
 	<h1>Work Experience</h1>
 </div>
 
-<div id="PDF"><a href="PDF/Jakub-Pirog-Resume.pdf" download>Download My Resume</a></div>
+<div id="PDF"><a href="pdf/jakub-pirog-resume.pdf" download>Download My Resume</a></div>
 
 <div id="JobExperience">
 
