updated resume and videography page

--- a/resume.html
+++ b/resume.html
@@ -70,17 +70,17 @@
 <div id="JobExperience">
 
 <div id="pair">
-<h4>Photographer - Nutmeg Publishing (Aug 2019 - Present)</h4>
+<h4>Intern & Production Assistant - Triple Threat TV (May 2020 - Present)</h4>
 
-<p>As a Sports and Event Photographer I cover UConn’s Division I Sports teams, as well as major events on campus such as the Climate Strike which happened on September 20th, 2019.
+<p>Triple Threat TV is an Emmy Award Winning Documentary Production Company in Stamford, CT. I am participating in an unpaid internship an am tasked with doing research, location scouting, and setting up for interview shoots.
 </p>
 
 </div>
 
 <div id="pair">
-<h4>Content Creator - SUBOG Concert Committee (Sep 2019 - Present)</h4>
+<h4>Head of Outreach - SUBOG at UConn (May 2020 - May 2021)</h4>
 
-<p>As a Content Creator I use photography, videography, and graphic design to produce content that is featured on the committee’s social media. I also designed a shirt for the school’s fall concert which was distributed to thousands of students.
+<p>SUBOG is the largest student run club and programming board at UConn with over 7,000 followers on Social Media. This unpaid position required me to create promotional graphics for all events and be in charge of all of SUBOG's social media.
 </p>
 
 </div>
@@ -88,30 +88,35 @@
 
 
 <div id="pair">
-<h4>UCONN Sports Video Production (Aug 2017 - Feb 2019)</h4>
+<h4>Project Leader and Videographer - FoodDock (Sep 2020 - Dec 2020)</h4>
 
-<p>I worked as a videographer and camera operator for the UConn Athletics department from August 2017 to February 2019. In this job I was responsible for recording UConn’s Division I sports teams during home games and uploading the footage to the internet so that it can be live streamed and edited into highlights.</p>
+<p>I worked as a Project Leader and Videographer for a start up company called FoodDock. My role was to oversee 3 other team members and aid in their production of a brand mascot, 30+ icons, and social media sample posts for Instagram, Facebook, and Pinterest. In addition I reached out to several local farmers and successfully shot and edited two documentary style short videos for FoodDock to use on their website.</p>
 
-<p>This job trained me to use professional grade cameras and other recording equipment to create exceptional videos for the University of Connecticut.</p>
 </div>
 
 
 <div id="pair">
-<h4>Graphic Designer / Content Organizer - <i>In the Crosshairs Exhibition</i> (Nov 2018 - Feb 2019)</h4>
+<h4>Photographer - Nutmeg Publishing (Aug 2019 - Sep 2020)</h4>
 
-<p>I created promotional material and organized content that would be featured in an exhibition entitled "In the Crosshairs: Dispatches from Central America, 1983-1990."</p>
+<p>As a Sports and Event Photographer I covered UConn's Division 1 sports teams, as well as major events on campus such as the Climate Strike which happeded on September 20, 2019.</p>
 
-<p>The exhibition was featuring the work of UConn's Professor of Journalism Scott Wallace, who has been published in TIME and National Geographic Magazines.</p>
 </div>
 
 
 <div id="pair">
 
-<h4>UCONN Protect Our Pack (May 2018 - Present)</h4>
+<h4>Videographer - UConn Athletics Department</h4>
 
-<p>Protect Our Pack is an organization at the University of Connecticut where community conscious students partner with school officials, such as the Dean of Students, to work on promoting healthy relationships around campus.</p>
+<p>In this role I recorded UConn's Division 1 sports teams during home games and uploaded footage to the internet so tht it could be live streamed and edited into highlights.</p>
 
-<p>As a Pack Leader, we do this by organizing seminars and presentations about topics such as “How to Deal with Partner Violence,” and also get trained in how to help individuals who are in uncomfortable situations.</p>
+</div>
+
+<div id="pair">
+
+<h4>Chapter President - Tau Kappa Epsilon Fraternity</h4>
+
+<p>President of one of the largest growing TKE Chapters in the nation. Recruited and initiated 34 new members into the brothehood over the span of my presidency. Was also responsible for regaining recognition and a good standing of the chapter by UConn following a 2018 suspension.</p>
+
 </div>
 
 </div>
@@ -126,7 +131,7 @@
 
 <h4>University of Connecticut, Class of 2021</h4>
 
-<p>I am currently a Junior at the University of Connecticut with a 3.5 GPA. I am majoring in Digital Media and Design with a concentration in Motion Graphics.</p>
+<p>I am currently a Senior at the University of Connecticut with a 3.5 GPA. I am pursuing a Bachelor of Fine Arts degree with a major in Digital Media and Design.</p>
 
 <p>In December 2018 I was offered and accepted an invitation to join the <b>National Society of Collegiate Scholoars.</b> The offer came after maintaining at least a 3.4 GPA and remaining in the top 20 percent of my class.</p>
 
