--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
         <div class="one">
           <div id="second-pic">
-            <h2>about me</h2>
+            <h2>About Me</h2>
           </div>
         </div>
 
