--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
         <div class="one">
           <div id="second-pic">
-            <h2>About Me</h2>
+         
           </div>
         </div>
 
@@ -99,6 +99,7 @@
               <li><a href="https://jakubpirog.com/photography">Photography</a></li>
               <li><a href="https://jakubpirog.com/videography">Videography</a></li>
               <li><a href="https://jakubpirog.com/resume">Resume</a></li>
+              <li><a href="https://jakubpirog.com/mystory">My Story</a></li>
 
             </ul>
           </nav>
