--- a/photography.html
+++ b/photography.html
@@ -60,6 +60,9 @@
       </li>
       <li class="nav-item1">
         <a class="nav-link1" href="https://jakubpirog.com/contact">Contact</a>
+        <li class="nav-item1">
+        <a class="nav-link1" href="https://jakubpirog.com/mystory">My Story</a>
+      </li>
       </li>
     </ul>
   </div>
