--- a/resume.html
+++ b/resume.html
@@ -57,6 +57,9 @@
       <li class="nav-item1">
         <a class="nav-link1" href="https://jakubpirog.com/contact">Contact</a>
       </li>
+      <li class="nav-item1">
+        <a class="nav-link1" href="https://jakubpirog.com/mystory">My Story</a>
+      </li>
     </ul>
   </div>
 </nav>
