--- a/contact.html
+++ b/contact.html
@@ -66,6 +66,9 @@
       <li class="nav-item1">
         <a class="nav-link1" href="https://jakubpirog.com/design">Design</a>
       </li>
+      <li class="nav-item1">
+        <a class="nav-link1" href="https://jakubpirog.com/mystory">My Story</a>
+      </li>
       
     </ul>
   </div>
