--- a/mystory.html
+++ b/mystory.html
@@ -111,11 +111,7 @@
     <p>My ambitions of becoming a DP, Designer, and Photographer have taken me across the globe, given me the privilege of working with some truly unforgettable people, and have opened my eyes to a world of amazing opportunities. I am tremendously thankful for everything I have been able to experience so far.</p>
 
 <p>
-Currently, I make graphics and run outreach for SUBOG (@subogatuconn), 
-
-intern for an emmy award winning film company (Triple Threat TV), 
-
-and am also leading a team of students to produce a video for a startup company called FoodDock.</p>
+My areas of expertise are in content creation, video production, and brand management. However I also have exceptional communication and organizational skills. I love creativity, collaboration, and working with a team to solve problems or achieve a larger goal. I have always been a team player, and pride myself on making whatever group I am a part of better by elevating those around me.</p>
 
 <p>
  It’s nice to meet you, now how can I help?
