--- a/resume.html
+++ b/resume.html
@@ -97,17 +97,29 @@
 <div id="JobExperience">
 
 <div id="pair">
-<h4>Intern & Production Assistant - Triple Threat TV (May 2020 - Present)</h4>
+<h4>Social Media Manager - Student Union Board of Governors at the University of Connecticut (May 2020 - May 2021)</h4>
 
-<p>Triple Threat TV is an Emmy Award Winning Documentary Production Company in Stamford, CT. I am participating in an unpaid internship an am tasked with doing research, location scouting, and setting up for interview shoots.
+<p>Utilized Adobe Illustrator to design 120+ graphics for Instagram, Facebook and Twitter to advertise 30+ SUBOG events.
+</p>
+
+<p>Collaborated with 8 seperate Committee Chairs to develop social media campaigns and marketing plans to maximize student turnout at their events
+</p>
+
+<p>Maintained a regular posting schedule which increased user engagement, revitalized SUBOG’s instagram and grew the following by over 1,000 followers
 </p>
 
 </div>
 
 <div id="pair">
-<h4>Head of Outreach - SUBOG at UConn (May 2020 - May 2021)</h4>
+<h4>Web Designer - Point Day Apparel (Dec 2020 - Present)</h4>
 
-<p>SUBOG is the largest student run club and programming board at UConn with over 7,000 followers on Social Media. This unpaid position required me to create promotional graphics for all events and be in charge of all of SUBOG's social media.
+<p>Built pointdayapparel.com for a responsive user friendly online marketplace
+</p>
+
+<p>Developed keywords for Search Engine Optimization in order to boost website traffic
+</p>
+
+<p>Boosted sales revenue by 300% on the first day of website launch
 </p>
 
 </div>
@@ -115,24 +127,41 @@
 
 
 <div id="pair">
-<h4>Project Leader and Videographer - FoodDock (Sep 2020 - Dec 2020)</h4>
+<h4>Intern and Production Assistant - Triple Threat TV (May 2020 - Dec 2020)</h4>
 
-<p>I worked as a Project Leader and Videographer for a start up company called FoodDock. My role was to oversee 3 other team members and aid in their production of a brand mascot, 30+ icons, and social media sample posts for Instagram, Facebook, and Pinterest. In addition I reached out to several local farmers and successfully shot and edited two documentary style short videos for FoodDock to use on their website.</p>
+<p>Scoured the internet to research interview subjects to be featured in a not yet released sports documentary</p>
+
+<p>Contributed to a company wide Google Sheet by cataloging archival footage to be used by the edit team to produce the documentary
+</p>
+
+<p>Conducted phone calls and email exchanges to scout locations for the show ‘Return to Amish’</p>
 
 </div>
 
 
 <div id="pair">
+<h4>Project Leader & Videographer - FoodDock (Sep 2020 - Dec 2020)</h4>
+
+<p>Oversaw 3 team members and their production of final client deliverables
+</p>
+
+<p>Successfuly shot and edited 2 documentary style short featuring local farmers for FoodDock to use on their website
+</p>
+
+</div>
+
+<div id="pair">
+
 <h4>Photographer - Nutmeg Publishing (Aug 2019 - Sep 2020)</h4>
 
-<p>As a Sports and Event Photographer I covered UConn's Division 1 sports teams, as well as major events on campus such as the Climate Strike which happeded on September 20, 2019.</p>
+<p>Photographed UConn’s Men’s Basketball, Women’s Basketball, Men’s Ice Hockey, and Women’s Field Hockey for spreads in the Yearbook</p>
 
+<p>Photographed the 2019 UConn Climate Strike to be featured in the Yearbook</p>
 </div>
-
 
 <div id="pair">
 
-<h4>Videographer - UConn Athletics Department</h4>
+<h4>Videographer - UConn Athletics Department (Aug 2017 - Feb 2019)</h4>
 
 <p>In this role I recorded UConn's Division 1 sports teams during home games and uploaded footage to the internet so tht it could be live streamed and edited into highlights.</p>
 
@@ -140,7 +169,7 @@
 
 <div id="pair">
 
-<h4>Chapter President - Tau Kappa Epsilon Fraternity</h4>
+<h4>Chapter President - Tau Kappa Epsilon Fraternity (Nov 2019 - Nov 2020)</h4>
 
 <p>President of one of the largest growing TKE Chapters in the nation. Recruited and initiated 34 new members into the brothehood over the span of my presidency. Was also responsible for regaining recognition and a good standing of the chapter by UConn following a 2018 suspension.</p>
 
