--- a/design.html
+++ b/design.html
@@ -81,11 +81,33 @@
 	<h1 class="text-pop-up-top">Design</h1>
 </div>
 
-<div id="photo-text">Learning how to use Adobe Illustrator is one of the best skills I have ever acquired. I enjoy the creative process of logo creation and bringing ideas to life.</div>
+<div id="photo-text">My design skills are rooted in me being an expert in Adobe Illustrator, Photoshop, InDesign, After Effects, and Premiere Pro. I use all of these systems to create remarkable logos, graphics, and mockups for both digital and print mediums.<br>I have a in depth knowledge of design principles and techniques that are intergrated in every piece of content that I create.</div>
 
 <br>
 <br>
 
+<div id="photo-text"> I have created over 100 graphics for the instagram account @subogatuconn during my time as their social media manager between May 2020 and May 2021. Here are some of my favorites.</div>
+<br>
+<br>
+
+<div class="mid">
+  <img id="collage2ab" src="img/JM-1.png" alt="John Mulaney Graphic">
+  <img id="collage2ab" src="img/Yoga-Feed-Post.png" alt="Yoga Graphic">
+  <img id="collage2ab" src="img/SUBOG-QSheet-Back.png" alt="quarter sheet">
+</div>
+
+<br>
+<br>
+
+<div id="photo-text">Check out this website I fully created and designed for <a href="https://www.pointdayapparel.com/">Point Day Apparel.</a></div>
+
+<br>
+<br>
+
+<img id="collage1" src="img/PDA.png" alt="Point Day Apparel">
+
+<br>
+<br>
 
 <div id="photo-text">Below is a brochure I created that folds out into a poster for a fictional festival.</div>
 <br>
@@ -131,21 +153,6 @@
 <img id="collage1" src="img/SWback.png" alt="Photo Collage">
 
 
-<br>
-<br>
-
-<div id="photo-text">A recruitment poster I created for the UConn Men's Club Rugby team.</div>
-<br>
-<br>
-
-<img id="collage2a" src="img/rugby.png" alt="Photo Collage">
-
-<br>
-<br>
-<div id="photo-text">A Business logo I created for a landscaping and tree removal company.</div>
-<br>
-
-<img id="collage3" src="img/ClayBaxter.png" alt="Photo Collage">
 </div>
 
 
