--- a/videography.html
+++ b/videography.html
@@ -95,7 +95,7 @@
 
 <div id="Study">My Demo Reel.</div>
 
-<div id="reel"><iframe width="1000" height="588" src="https://www.youtube.com/embed/zquVQpmyVD4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+<div id="collage2"><iframe width="600" height="315" src="https://www.youtube.com/embed/zquVQpmyVD4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
 
 <div id="Study">My most recent work. An interview featuring a local farmer promoting a start up company called FoodDock.</div>
 
