JR project added

--- a/videography.html
+++ b/videography.html
@@ -97,7 +97,11 @@
 
 <div id="collage2"><iframe width="600" height="315" src="https://www.youtube.com/embed/zquVQpmyVD4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
 
-<div id="Study">My most recent work. An interview featuring a local farmer promoting a start up company called FoodDock.</div>
+<div id="Study">My most recent work. A mini documentary about JR SPECS, an up and coming music artist.</div>
+
+<div id="collage2"><iframe width="600" height="315" src="https://www.youtube.com/embed/BtUOfpweaQ0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+
+<div id="Study">A video I filmed, directed and edited featuring a local farmer promoting a start up company called FoodDock.</div>
 
 <div id="collage2"><iframe width="600" height="315" src="https://www.youtube.com/embed/yGM4yu89YGE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
 
