--- a/resume.html
+++ b/resume.html
@@ -92,12 +92,12 @@
 	<h1>Work Experience</h1>
 </div>
 
-<div id="PDF"><a href="pdf/jakub-pirog-resume.pdf" download>Download My Resume</a></div>
+<div id="PDF"><a href="pdf/JakubPirog-Resume2021.pdf" download>Download My Resume</a></div>
 
 <div id="JobExperience">
 
 <div id="pair">
-<h4>Social Media Manager - Student Union Board of Governors at the University of Connecticut (May 2020 - May 2021)</h4>
+<h4>Head Graphic Designer & Social Media Manager - Student Union Board of Governors at the University of Connecticut (May 2020 - May 2021)</h4>
 
 <p>Utilized Adobe Illustrator to design 120+ graphics for Instagram, Facebook and Twitter to advertise 30+ SUBOG events.
 </p>
@@ -107,6 +107,9 @@
 
 <p>Maintained a regular posting schedule which increased user engagement, revitalized SUBOG’s instagram and grew the following by over 1,000 followers
 </p>
+
+<p>Followed the SUBOG brand guide in order to create a cohesive, unified and
+recognizable look for all graphics</p>
 
 </div>
 
