photo pages update

--- a/entertainment.html
+++ b/entertainment.html
@@ -101,7 +101,7 @@
 
 <h2 style="text-align:center">Entertainment Photography</h2>
 
-<p>I love capturing amazing moments on camera. The photos on the <span class="hide"></span> <span class="show">top </span>were taken from UConn's upset victory over #15 Florida. On the <span class="hide"></span><span class="show">bottom </span>are behind the scenes photos from Mark Kuban's "Cake" Music Video and a "Kids That Fly" live performance.</p>
+<p>I love capturing amazing moments on camera. The first series of photos showcase some of my favorite action sports photos. The second series of photos showcase my music related photos. The first set are behind the scenes photos from Mark Kuban's "Cake" Music Video, followed by a "Kids That Fly" live performance, and concluded with photos from the JR SPECS music video "Getcha Geeked".</p>
 
 <div id="holder">
 <h3 class="hide">Sports</h3>
@@ -174,8 +174,60 @@
     <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
   </div>
 
+  <div class="mySlides1">
+    <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
+    <img src="img/11.JPG" alt="uconn basketball">
+    <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
+  </div>
+
+  <div class="mySlides1">
+    <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
+    <img src="img/12.JPG" alt="uconn basketball">
+    <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
+  </div>
+
+  <div class="mySlides1">
+    <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
+    <img src="img/13.JPG" alt="uconn basketball">
+    <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
+  </div>
+
+  <div class="mySlides1">
+    <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
+    <img src="img/14.jpg" alt="uconn basketball">
+    <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
+  </div>
+
+  <div class="mySlides1">
+    <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
+    <img src="img/15.JPG" alt="uconn basketball">
+    <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
+  </div>
+
+  <div class="mySlides1">
+    <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
+    <img src="img/16.jpg" alt="uconn basketball">
+    <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
+  </div>
+
+  <div class="mySlides1">
+    <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
+    <img src="img/17.JPG" alt="uconn hockey">
+    <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
+  </div>
   
-  
+  <div class="mySlides1">
+    <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
+    <img src="img/18.JPG" alt="uconn hockey">
+    <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
+  </div>
+
+  <div class="mySlides1">
+    <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
+    <img src="img/19.JPG" alt="uconn hockey">
+    <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
+  </div>
+
 </div>
 
 <span class="show1">Music</span>
@@ -250,6 +302,24 @@
   <div class="mySlides2">
     <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
     <img src="img/bass.jpg" alt="Music Video BTS">
+    <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
+  </div>
+
+  <div class="mySlides2">
+    <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
+    <img src="img/JR.JPG" alt="Music Video BTS">
+    <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
+  </div>
+
+  <div class="mySlides2">
+    <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
+    <img src="img/carton1.JPG" alt="Music Video BTS">
+    <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
+  </div>
+
+  <div class="mySlides2">
+    <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
+    <img src="img/carton2.JPG" alt="Music Video BTS">
     <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
   </div>
 
