--- a/landscape.html
+++ b/landscape.html
@@ -102,7 +102,7 @@
 
 <h2 style="text-align:center">Landscape Photography</h2>
 
-<p>Shooting different landscapes is a passion of mine. I have a minimalist style, and try to have my photos mimic the feel of a vibrant oil painting.</p>
+<p>Shooting different landscapes is a passion of mine. I love being in nature and capturing my surroundings. These are my favorite photos from my adventures across Australia and Costa Rica.</p>
 
 
 <div id="holder1">
@@ -239,6 +239,84 @@
   <div class="mySlides2">
     <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
     <img src="img/IMG_5016.jpg" alt="Wollongong">
+    <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
+  </div>
+
+  <div class="mySlides2">
+    <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
+    <img src="img/costa1.JPG" alt="Costa Rica">
+    <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
+  </div>
+
+  <div class="mySlides2">
+    <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
+    <img src="img/costa2.JPG" alt="Costa Rica">
+    <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
+  </div>
+
+  <div class="mySlides2">
+    <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
+    <img src="img/costa3.JPG" alt="Costa Rica">
+    <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
+  </div>
+
+  <div class="mySlides2">
+    <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
+    <img src="img/costa4.JPG" alt="Costa Rica">
+    <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
+  </div>
+
+  <div class="mySlides2">
+    <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
+    <img src="img/costa5.JPG" alt="Costa Rica">
+    <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
+  </div>
+
+  <div class="mySlides2">
+    <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
+    <img src="img/costa6.JPG" alt="Costa Rica">
+    <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
+  </div>
+
+  <div class="mySlides2">
+    <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
+    <img src="img/costa7.JPG" alt="Costa Rica">
+    <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
+  </div>
+
+  <div class="mySlides2">
+    <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
+    <img src="img/costa8.JPG" alt="Costa Rica">
+    <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
+  </div>
+
+  <div class="mySlides2">
+    <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
+    <img src="img/costa9.JPG" alt="Costa Rica">
+    <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
+  </div>
+
+  <div class="mySlides2">
+    <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
+    <img src="img/costa10.JPG" alt="Costa Rica">
+    <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
+  </div>
+
+  <div class="mySlides2">
+    <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
+    <img src="img/costa11.JPG" alt="Costa Rica">
+    <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
+  </div>
+
+  <div class="mySlides2">
+    <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
+    <img src="img/costa12.JPG" alt="Costa Rica">
+    <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
+  </div>
+
+  <div class="mySlides2">
+    <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
+    <img src="img/costa14.JPG" alt="Costa Rica">
     <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
   </div>
 
