--- a/resume.html
+++ b/resume.html
@@ -190,12 +190,13 @@ recognizable look for all graphics</p>
 
 <h4>University of Connecticut, Class of 2021</h4>
 
-<p>I am currently a Senior at the University of Connecticut with a 3.5 GPA. I am pursuing a Bachelor of Fine Arts degree with a major in Digital Media and Design.</p>
-
-<p>In December 2018 I was offered and accepted an invitation to join the <b>National Society of Collegiate Scholoars.</b> The offer came after maintaining at least a 3.4 GPA and remaining in the top 20 percent of my class.</p>
-
+<p>I am a graduate of the University of Connecticut with a Bachelor of Fine Arts degree in Digital Media and Design. I excelled in school, finishing with a 3.64 GPA. During my time at the University of Connecticut I became a multimedia specialist with advanced skills in photography, graphic design, videography, web design, and social media management. I am also highly proficient in all aspects of the Adobe Creative Cloud. </p>
 
 </div>
+
+<br>
+<br>
+<br>
 
 <script>
     /* Open */
